documentation induced fixes

--- a/docs/notebooks/01_ge_minimal.ipynb
+++ b/docs/notebooks/01_ge_minimal.ipynb
@@ -5,7 +5,9 @@
       "metadata": {},
       "source": [
         "# GE minimal\n",
-        "Render a small GE grid as SVG."
+        "Render a small GE grid as SVG and inspect the TeX.\n",
+        "\n",
+        "Expected output: a single 2×2 matrix with standard delimiters."
       ]
     },
     {
@@ -16,11 +18,57 @@
       "source": [
         "import sympy as sym\n",
         "from IPython.display import SVG, display\n",
-        "from matrixlayout.ge import ge_grid_svg\n",
-        "\n",
+        "from matrixlayout.ge import ge_grid_tex, ge_grid_svg\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "matrices = [[None, sym.Matrix([[1, 2], [3, 4]])]]\n",
+        "tex = ge_grid_tex(matrices=matrices)\n",
+        "\n",
+        "svg = ge_grid_svg(\n",
+        "    matrices=matrices,\n",
+        "    output_dir=\"./_out\",\n",
+        "    output_stem=\"ge_min\",\n",
+        ")\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Matrix product grid\n",
+        "A 2×2 example laid out as a block grid: [[None, B], [A, A@B]].\n",
+        "\n",
+        "Expected output: a 2×2 block grid with B in the top-right and A·B in the bottom-right."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "A = sym.Matrix([[1, 2], [0, 1]])\n",
+        "B = sym.Matrix([[2, 0], [3, 1]])\n",
+        "matrices = [[None, B], [A, A * B]]\n",
+        "\n",
         "svg = ge_grid_svg(matrices=matrices)\n",
         "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Troubleshooting\n",
+        "If rendering fails, try calling `ge_grid_tex` to inspect the TeX, or set `output_dir`\n",
+        "to capture artifacts for inspection."
       ]
     }
   ],
