--- a/docs/notebooks/02_qr_layout.ipynb
+++ b/docs/notebooks/02_qr_layout.ipynb
@@ -5,7 +5,9 @@
       "metadata": {},
       "source": [
         "# QR layout\n",
-        "Render a small QR grid as SVG."
+        "Render a small QR grid as SVG using the standard layered layout.\n",
+        "\n",
+        "Expected output: a 3-layer QR grid with W, W^T, W^T A, and W^T W blocks."
       ]
     },
     {
@@ -18,11 +20,63 @@
         "from IPython.display import SVG, display\n",
         "from matrixlayout.qr import qr_grid_svg\n",
         "\n",
+        "def build_qr_grid(A, W):\n",
+        "    WtW = W.T * W\n",
+        "    WtA = W.T * A\n",
+        "    S = sym.Matrix.diag(*[1 / sym.sqrt(x) for x in sym.Matrix.diagonal(WtW)])\n",
+        "    Qt = S * W.T\n",
+        "    R = S * WtA\n",
+        "    return [\n",
+        "        [None, None, A, W],\n",
+        "        [None, W.T, WtA, WtW],\n",
+        "        [S, Qt, R, None],\n",
+        "    ]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "A = sym.Matrix([[1, 2], [3, 4]])\n",
         "W = sym.eye(2)\n",
-        "matrices = [[None, None, A, W]]\n",
+        "matrices = build_qr_grid(A, W)\n",
+        "\n",
         "svg = qr_grid_svg(matrices=matrices)\n",
         "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## With array names\n",
+        "Enable default matrix labels.\n",
+        "\n",
+        "Expected output: the same grid with labels on each block."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "A = sym.Matrix([[1, 2], [3, 4]])\n",
+        "W = sym.eye(2)\n",
+        "matrices = build_qr_grid(A, W)\n",
+        "\n",
+        "svg = qr_grid_svg(matrices=matrices, array_names=True)\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Troubleshooting\n",
+        "If rendering fails, set `output_dir` to capture artifacts and check `toolchain_name`."
       ]
     }
   ],
