--- a/docs/notebooks/03_eig_svd_table.ipynb
+++ b/docs/notebooks/03_eig_svd_table.ipynb
@@ -5,7 +5,9 @@
       "metadata": {},
       "source": [
         "# Eigen/SVD table\n",
-        "Render an eigenproblem table as SVG."
+        "Render an eigenproblem table as SVG without relying on la_figures.\n",
+        "\n",
+        "Expected output: a compact eigenvalue table with two eigenpairs."
       ]
     },
     {
@@ -14,15 +16,32 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import sympy as sym\n",
         "from IPython.display import SVG, display\n",
-        "from la_figures import eig_tbl_spec\n",
-        "from matrixlayout import eigproblem_svg\n",
+        "from matrixlayout import eigproblem_svg\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "spec = {\n",
+        "    \"lambda\": [2, 3],\n",
+        "    \"ma\": [1, 1],\n",
+        "    \"evecs\": [[[1, 0]], [[0, 1]]],\n",
+        "}\n",
         "\n",
-        "A = sym.Matrix([[2, 0], [0, 3]])\n",
-        "spec = eig_tbl_spec(A)\n",
         "svg = eigproblem_svg(spec, case=\"S\")\n",
         "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Troubleshooting\n",
+        "If rendering fails, switch to `eigproblem_tex` and inspect the TeX."
       ]
     }
   ],
