--- a/docs/notebooks/04_decorators_gallery.ipynb
+++ b/docs/notebooks/04_decorators_gallery.ipynb
@@ -5,7 +5,9 @@
       "metadata": {},
       "source": [
         "# Decorators gallery\n",
-        "Show simple decorator usage on a GE grid."
+        "Compact examples of selector and decorator usage.\n",
+        "\n",
+        "Expected output: five small variants of the same 2×2 matrix with distinct styling."
       ]
     },
     {
@@ -17,14 +19,123 @@
         "import sympy as sym\n",
         "from IPython.display import SVG, display\n",
         "from matrixlayout.ge import ge_grid_svg\n",
-        "from matrixlayout.formatting import decorator_box, sel_entry\n",
-        "\n",
+        "from matrixlayout.formatting import (\n",
+        "    decorator_box,\n",
+        "    decorator_bg,\n",
+        "    decorator_bf,\n",
+        "    decorator_color,\n",
+        "    sel_entry,\n",
+        "    sel_row,\n",
+        "    sel_col,\n",
+        "    sel_box,\n",
+        "    sel_rows,\n",
+        ")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "matrices = [[None, sym.Matrix([[1, 2], [3, 4]])]]\n",
         "decorators = [\n",
         "    {\"grid\": (0, 1), \"entries\": [sel_entry(0, 0)], \"decorator\": decorator_box()},\n",
         "]\n",
         "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
         "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Row highlight\n",
+        "Use a row selector and background decorator."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "decorators = [\n",
+        "    {\"grid\": (0, 1), \"entries\": [sel_row(0)], \"decorator\": decorator_bg(\"yellow\")},\n",
+        "]\n",
+        "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Column highlight\n",
+        "Use a column selector with bold text."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "decorators = [\n",
+        "    {\"grid\": (0, 1), \"entries\": [sel_col(1)], \"decorator\": decorator_bf()},\n",
+        "]\n",
+        "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Box range\n",
+        "Apply a background to a 2x2 box."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "decorators = [\n",
+        "    {\"grid\": (0, 1), \"entries\": [sel_box((0, 0), (1, 1))], \"decorator\": decorator_bg(\"gray!20\")},\n",
+        "]\n",
+        "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Text color\n",
+        "Apply a text color decorator to selected entries."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "decorators = [\n",
+        "    {\"grid\": (0, 1), \"entries\": [sel_rows([0, 1])], \"decorator\": decorator_color(\"blue\")},\n",
+        "]\n",
+        "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+        "display(SVG(svg))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Troubleshooting\n",
+        "If rendering fails, set `output_dir` and verify `toolchain_name`."
       ]
     }
   ],
