vertical separation between matrix stack layers

--- a/docs/notebooks/01_ge_minimal.ipynb
+++ b/docs/notebooks/01_ge_minimal.ipynb
@@ -8,7 +8,7 @@
     "# GE minimal\n",
     "Render a small GE grid as SVG and inspect the TeX.\n",
     "\n",
-    "Expected output: a single 2×2 matrix with standard delimiters."
+    "Expected output: a single 2\u00d72 matrix with standard delimiters."
    ]
   },
   {
@@ -110,9 +110,9 @@
    "metadata": {},
    "source": [
     "## Matrix product grid\n",
-    "A 2×2 example laid out as a block grid: [[None, B], [A, A@B]].\n",
+    "A 2\u00d72 example laid out as a block grid: [[None, B], [A, A@B]].\n",
     "\n",
-    "Expected output: a 2×2 block grid with B in the top-right and A·B in the bottom-right."
+    "Expected output: a 2\u00d72 block grid with B in the top-right and A\u00b7B in the bottom-right."
    ]
   },
   {
@@ -228,7 +228,7 @@
     "B = sym.Matrix([[2, 0], [3, 1]])\n",
     "matrices = [[None, B], [A, A * B]]\n",
     "\n",
-    "svg = ge_grid_svg(matrices=matrices)\n",
+    "svg = ge_grid_svg(matrices=matrices, block_vspace_mm=1)\n",
     "display(SVG(svg))\n"
    ]
   },
