--- a/docs/notebooks/04_decorators_gallery.ipynb
+++ b/docs/notebooks/04_decorators_gallery.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import sympy as sym\n",
     "from IPython.display import SVG, display\n",
-    "from matrixlayout.ge import ge_grid_svg\n",
+    "from matrixlayout.ge import grid_svg\n",
     "from matrixlayout.formatting import (\n",
     "    decorator_box,\n",
     "    decorator_bg,\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "32cb2b1a",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "decorators = [\n",
     "    {\"grid\": (0, 1), \"entries\": [sel_entry(0, 0)], \"decorator\": decorator_box()},\n",
     "]\n",
-    "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+    "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
     "display(SVG(svg))\n"
    ]
   },
@@ -200,7 +200,7 @@
     "decorators = [\n",
     "    {\"grid\": (0, 1), \"entries\": [sel_row(0)], \"decorator\": decorator_bg(\"yellow\")},\n",
     "]\n",
-    "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+    "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
     "display(SVG(svg))\n"
    ]
   },
@@ -289,7 +289,7 @@
     "decorators = [\n",
     "    {\"grid\": (0, 1), \"entries\": [sel_col(1)], \"decorator\": decorator_bf()},\n",
     "]\n",
-    "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+    "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
     "display(SVG(svg))\n"
    ]
   },
@@ -379,7 +379,7 @@
     "decorators = [\n",
     "    {\"grid\": (0, 1), \"entries\": [sel_box((0, 0), (1, 1))], \"decorator\": decorator_bg(\"gray!20\")},\n",
     "]\n",
-    "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+    "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
     "display(SVG(svg))\n"
    ]
   },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3d9be0cb",
    "metadata": {},
    "outputs": [
@@ -432,16 +432,16 @@
        "    </g>\n",
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.52475)\">\n",
-       "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g32\">\n",
+       "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g32\">\n",
        "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use30\" width=\"100%\" height=\"100%\"/>\n",
        "    </g>\n",
-       "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g36\">\n",
+       "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g36\">\n",
        "      <use xlink:href=\"#glyph0-2\" x=\"198.591\" y=\"150.101\" id=\"use34\" width=\"100%\" height=\"100%\"/>\n",
        "    </g>\n",
-       "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g40\">\n",
+       "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g40\">\n",
        "      <use xlink:href=\"#glyph0-3\" x=\"183.647\" y=\"162.056\" id=\"use38\" width=\"100%\" height=\"100%\"/>\n",
        "    </g>\n",
-       "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g44\">\n",
+       "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g44\">\n",
        "      <use xlink:href=\"#glyph0-4\" x=\"198.591\" y=\"162.056\" id=\"use42\" width=\"100%\" height=\"100%\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g48\">\n",
@@ -463,9 +463,9 @@
    ],
    "source": [
     "decorators = [\n",
-    "    {\"grid\": (0, 1), \"entries\": [sel_rows([0, 1])], \"decorator\": decorator_color(\"blue\")},\n",
+    "    {\"grid\": (0, 1), \"entries\": [sel_rows([0, 1])], \"decorator\": decorator_color(\"red\")},\n",
     "]\n",
-    "svg = ge_grid_svg(matrices=matrices, decorators=decorators)\n",
+    "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
     "display(SVG(svg))\n"
    ]
   },
